and the stand-alone tools do not exist anymore. For testing,
the commands can be run with 'udevadm test-builtin <cmd>'.

The fusectl filesystem is no longer mounted directly from udev.
Systemd systems will take care of mounting fusectl and configfs
now. Non-systemd systems need to ship their own rule if they
need these filesystems auto-mounted.

udev 173
========
Bugfixes.

The udev-acl extra is no longer enabled by default now. To enable it,
--enable-udev_acl needs to be given at ./configure time. On systemd
systems, the udev-acl rules prevent it from running as the functionality
has moved to systemd.

udev 172
========
Bugfixes.

Udev now enables kernel media-presence polling if available. Part
of udisks optical drive tray-handling moved to cdrom_id: The tray
is locked as soon as a media is detected to enable the receiving
of media-eject-request events. Media-eject-request events will
eject the media.

Libudev enumerate is now able to enumerate a subtree of a given
device.

The mobile-action-modeswitch modeswitch tool was deleted. The
functionality is provided by usb_modeswitch now.

udev 171
========
Bugfixes.

The systemd service files require systemd version 28. The systemd
socket activation make it possible now to start 'udevd' and 'udevadm
trigger' in parallel.

udev 170
========
Fix bug in control message handling, which can lead to a failing
udevadm control --exit. Thanks to Jürg Billeter for help tracking
it down.

udev 169
========
Bugfixes.

We require at least Linux kernel 2.6.32 now. Some platforms might
require a later kernel that supports accept4() and similar, or
need to backport the trivial syscall wiring to the older kernels.

The hid2hci tool moved to the bluez package and was removed.

Many of the extras can be --enable/--disabled at ./configure
time. The --disable-extras option was removed. Some extras have
been disabled by default. The current options and their defaults
can be checked with './configure --help'.

udev 168
========
Bugfixes.
